finished adding sprites and game functions.